--- a/users/templates/users/dashboard.html
+++ b/users/templates/users/dashboard.html
@@ -6,7 +6,20 @@
 
 {% block content %}
     <div class="container">
-        {% thought_form %}
-        <h1>Dashboard</h1>
+
+        <div class="row">
+            <div class="col-md-6">
+                <!-- Displays past Condition(s) -->
+                <h2>Recent Thoughts</h2>
+                <ul>
+                    {% for thought in user.thoughts.all %}
+                    <li>{{thought.get_condition_display }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+            <div class="col-md-6">
+                {% thought_form %}
+            </div>
+        </div>
     </div>
 {% endblock %}
