--- a/users/templates/users/dashboard.html
+++ b/users/templates/users/dashboard.html
@@ -5,17 +5,22 @@
 {% block title %}Dashboard | {{ block.super }}{% endblock %}
 
 {% block content %}
+<!-- Displays past Condition(s) -->
     <div class="container">
-
         <div class="row">
             <div class="col-md-6">
-                <!-- Displays past Condition(s) -->
                 <h2>Recent Thoughts</h2>
-                <ul>
+                <div class="list-group">
                     {% for thought in user.thoughts.all %}
-                    <li>{{thought.get_condition_display }}</li>
+                        <div class="list-group-item">
+                            <h4 class="list-group-item-heading">
+                                <time class="pull-right small" datetime="{{ thought.recorded_at }}">{{ thought.recorded_at|date:"SHORT_DATE_FORMAT"}}</time>
+                                {{ thought.get_condition_display }}
+                            </h4>
+                            {% if thought.notes %} {{ thought.notes|linebreaks }} {% endif %}
+                        </div>
                     {% endfor %}
-                </ul>
+                </div>
             </div>
             <div class="col-md-6">
                 {% thought_form %}
