--- a/users/templates/users/dashboard.html
+++ b/users/templates/users/dashboard.html
@@ -1,5 +1,7 @@
 {% extends 'layout.html' %}
 
+{% load static from staticfiles %}
+
 {% load thought_tags %}
 
 {% block title %}Dashboard | {{ block.super }}{% endblock %}
@@ -27,4 +29,8 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block js %}
+<script src="{% static 'js/stretchy.js' %}" data-filter="#id_notes" async></script>
 {% endblock %}
