Change order to: order_by (recored_at)

--- a/users/templates/users/dashboard.html
+++ b/users/templates/users/dashboard.html
@@ -31,8 +31,9 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="ct-chart ct-perfect-fourth"></div>
+               <!-- Display labels, but hidden due to layout
                 {% chart_data as email%}
-                {{ email }}
+                {{ email }}-->
             </div>
 
         </div>
