--- a/users/templates/users/dashboard.html
+++ b/users/templates/users/dashboard.html
@@ -35,6 +35,14 @@
                 {% chart_data as email%}
                 {{ email }}-->
             </div>
+            <div class="col-md-6">
+                <h3>Companies</h3>
+                <div class="list-group">
+                    {% for company in user.companies.all %}
+                        <a href="#" class="list-group-item">{{ company.name }}</a>
+                    {% endfor %}
+                </div>
+            </div>
 
         </div>
     </div>
