--- a/groups/templates/companies/detail.html
+++ b/groups/templates/companies/detail.html
@@ -7,15 +7,20 @@
         <div class="row">
             <div class="col-md-6">
                 <h3>{{ object.name }}</h3>
-                    {{ object.description|linebreaks}}
+                    {{ object.description|linebreaks }}
+                    {% if user == object.created_by %}
+                        <hr>
+                        <a href="{% url 'groups:companies:update' slug=object.slug %}" class="btn btn-default">Edit</a>
+                    {% endif %}
             </div>
                 <div class="col-md-6">
-                    <h4>detail.html - Members</h4>
+                    <h4>Members</h4>
                     <div class="list-group">
                         {% for member in object.members.all %}
-                            <a href="#" class="list-group-item">{{ member.get_full_name }}</a>
+                            <a href="#" class="list-group-item">
                                 {% if member == object.created_by %}<i class="glyphicon glyphicon-star"></i>{% endif %}
                                     {{ member.get_full_name }}
+                            </a>
                         {% endfor %}
                     </div>
                 </div>
