--- a/templates/layout.html
+++ b/templates/layout.html
@@ -51,8 +51,19 @@
                         <li>
                             <a href="{% url 'groups:companies:create' %}">Create New</a>
                         </li>
-
                     </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Families<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            {% for family in user.families.all %}
+                                <li><a href="{% url 'groups:families:detail' slug=family.slug %}">{{ family.name }}</a></li>
+                            {% endfor %}
+                            <li role="separator" class="divider"></li>
+                            <li>
+                                <a href="{% url 'groups:families:create' %}">Create New</a>
+                            </li>
+                        </ul>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
