--- a/users/templates/users/dashboard.html
+++ b/users/templates/users/dashboard.html
@@ -36,14 +36,21 @@
                 {{ email }}-->
             </div>
             <div class="col-md-6">
+                <!-- Company -->
                 <h3>Companies</h3>
                 <div class="list-group">
                     {% for company in user.companies.all %}
                         <a href="{% url 'groups:companies:detail' slug=company.slug %}" class="list-group-item">{{ company.name }}</a>
                     {% endfor %}
                 </div>
+                <!-- Families -->
+                <h3>Families</h3>
+                <div class="list-group">
+                    {% for family in user.families.all %}
+                        <a href="{% url 'groups:families:detail' slug=family.slug %}" class="list-group-item">{{ family.name }}</a>
+                    {% endfor %}
+                </div>
             </div>
-
         </div>
     </div>
 
