--- a/templates/layout.html
+++ b/templates/layout.html
@@ -49,6 +49,7 @@
                         {% endfor %}
                         <li role="separator" class="divider"></li>
                         <li>
+                            <a href="{% url 'groups:companies:invites' %}">Invitations</a>
                             <a href="{% url 'groups:companies:create' %}">Create New</a>
                         </li>
                     </ul>
@@ -61,6 +62,7 @@
                             {% endfor %}
                             <li role="separator" class="divider"></li>
                             <li>
+                                {#<a href="{% url 'groups:families:invites' %}">Invitations</a>#}
                                 <a href="{% url 'groups:families:create' %}">Create New</a>
                             </li>
                         </ul>
